# ILI9488-16bit_shuping

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/NTP/: CMakeLists.txt
components/NTP/include/: NTP.h
components/NTP/src/: NTP.c
components/i80/: CMakeLists.txt  i80_lcd.c  i80_lcd.h  i80_lcd_panels.c  i80_lcd_panels.h
components/led/: CMakeLists.txt
components/led/include/: led.h
components/led/src/: led.c
components/lv_examples/: lv_demo_conf.h
components/lv_examples/lv_examples/src/lv_demo_widgets/: lv_demo_widgets.c
components/lv_mydemo/: CMakeLists.txt
components/lv_mydemo/include/: lv_mydemo.h
components/lv_mydemo/src/: lv_mydemo.c
components/lvgl/: lv_conf_template.h
components/lvgl/env_support/cmake/: esp.cmake
components/lvgl_esp32_drivers/: lvgl_helpers.c  lvgl_helpers.h  lvgl_spi_conf.h
components/lvgl_esp32_drivers/lvgl_touch/: ft6x36.h
components/lvgl_port/: CMakeLists.txt  Kconfig  lv_port_disp.c  lv_port_disp.h
main/: CMakeLists.txt  NOTE  app_main.c  app_main.h  idf_component.yml  image1.c  my_lv_port_indev.c  my_lv_port_indev.h  ui.c  ui.h  ui_img_bg1_png.c  ui_img_bg2_png.c
