idf_component_register( SRCS
                            # "ui_img_back_png.c" 
                            "ui.c" 
                            "app_main.c" 
                            "ui_helpers.c" 
                            # "ui_img_iot_png.c" 
                            # "ui_img_power_png.c" 
                            # "ui_img_vot_png.c" 
                            # "ui_img_2_png.c" 
                            # "ui_img_set_png.c"
                            # "ui_img_bg_png.c"
                            "ui_img_bg1_png.c"
                            "ui_img_bg2_png.c"
                            "my_lv_port_indev.c"
                        INCLUDE_DIRS "" ) 

#把main扔进这